2006-06-17 Harri Pitkänen  <hatapitk@iki.fi>

	* Do not hyphenate between vowels in voikko_simple_hyphenation if
	  VOIKKO_OPT_NO_UGLY_HYPHENATION is set
	* Remove warning about unimplemented VOIKKO_OPT_NO_UGLY_HYPHENATION
	  in voikko.h (it was first implemented on 2006-05-24)
	* Suggest replacing s with š and z with ž rather than sh and zh.
	* If a suggestion cannot be represented in the external encoding, drop only
	  that suggestion instead of returning null immediately.

2006-06-06 Harri Pitkänen  <hatapitk@iki.fi>

	* Improve character insertion suggestions

2006-06-01  Harri Pitkänen  <hatapitk@iki.fi>

	* Add error recovery and fix some related bugs
	* Increase version to 0.9

2006-05-30  Kai Solehmainen  <kai.solehmainen@oikeatoliot.fi>

	* nl_langinfo() ported for Windows version.
	* Dictionary path is searched from Windows registry:
		- first from HKEY_CURRENT_USER\SOFTWARE\Voikko\DictionaryPath
		- and then if not found from HKEY_LOCAL_MACHINE\SOFTWARE\Voikko\DictionaryPath 
	* Minor changes for Windows version. 

2006-05-30  Harri Pitkänen  <hatapitk@iki.fi>

	* Suggestions are sorted by estimated correctness:
	  compound suggestions and suggestions that contain both letter
	  and case changes are given lower priority.

2006-05-29  Harri Pitkänen  <hatapitk@iki.fi>

	* Character deletion suggestions
	* Character insertion suggestions
	* Character swap suggestions

2006-05-27  Harri Pitkänen  <hatapitk@iki.fi>

	* Character replacing suggestions

2006-05-24  Harri Pitkänen  <hatapitk@iki.fi>

	* Do not add hyphenation points if hyphenation is forbidden in Malaga
	* Implement VOIKKO_OPT_NO_UGLY_HYPHENATION
	* New options in voikkohyphenate: no_ugly_hyphenation=0|1

2006-05-24  Harri Pitkänen  <hatapitk@iki.fi>

	* Word splitting suggestions

2006-05-23  Harri Pitkänen  <hatapitk@iki.fi>

	* Vowel changing suggestions

2006-05-22  Harri Pitkänen  <hatapitk@iki.fi>

	* Add manual pages for voikkospell and voikkohyphenate
