@@ -1,3 +1,7 @@
+2006-06-26 Harri Pitkänen  <hatapitk@iki.fi>
+
+	* Fix a bug in character insertion suggestions
+
 2006-06-17 Harri Pitkänen  <hatapitk@iki.fi>
 
 	* Do not hyphenate between vowels in voikko_simple_hyphenation if
